shell/sass/gnome-shell/_common.scss
/* ... */
$panel-corner-radius: 0;

$font-family: Noto Sans, Cantarell, Sans-Serif;
$mono-font-family: Noto Mono, Monospace;

stage {
  @include fontscaling($ref_size);
  font-family: $font-family;
  font-weight: 400;
  color: $fg_color;
}


// /***********
//  * Widgets *
//  ***********/


// /***********
//  * Buttons *
//  ***********/

.button {
  @include button(flat-normal);
  padding: if($eta == 'false', 7px 16px 8px, 5px 12px 6px);
  border-radius: 2px;
  border-width: 0;
  font-weight: 500;
  &:hover { @include button(flat-hover); }
  &:active { @include button(flat-active); }
  &:insensitive { @include button(flat-insensitive); }
  &:focus { @include button(flat-focus); }
}

.modal-dialog-linked-button {
  padding: if($eta == 'false', 9px 16px 10px, 6px 12px 7px);
  border: none;
  color: $inverted_secondary_accent_label_color;
  background-color: transparent;
  box-shadow: 0 0 0 2px transparent;
  text-shadow: none;
  icon-shadow: none;
  font-weight: 700;
  &:hover {
    color: $inverted_accent_label_color;
    background-color: $accent_fill_color;
  }
  &:focus {
    color: $inverted_accent_label_color;
    background-color: $hidden_fill_color;
    box-shadow: inset 0 0 0 2px $accent_fill_color;
    &:hover { background-color: $accent_fill_color; }
  }
  &:active {
    color: $inverted_accent_label_color;
    background-color: $accent_active_fill_color;
    box-shadow: $empty_shadow;
  }
  &:insensitive { @include button(osd-insensitive); }

  &:first-child { border-radius: 0 0 0 2px; }
  &:last-child {
    border-right-width: 0;
    border-radius: 0 0 2px 0;
  }
  &:first-child:last-child {
    border-right-width: 0;
    border-radius: 0 0 2px 2px;
  }
}


// /***********
//  * Entries *
//  ***********/

StEntry {
  @include entry(normal);
  padding: if($eta == 'false', 7px 8px 8px, 5px 6px 6px);
  border-radius: 0;
  border-width: 0;
  color: if($nokto == 'false', $inverted_fg_color, $fg_color);
  selection-background-color: $selected_bg_color;
  selected-color: $selected_fg_color;
  transition-duration: 0s;
  &:hover { @include entry(hover); }
  &:focus { @include entry(focus); }
  &:insensitive { @include entry(insensitive); }

  StIcon.capslock-warning {
    icon-size: 16px;
    warning-color: $warning_color;
    padding: 0 2px;
  }
}


// /**************
//  * Scrollbars *
//  **************/

StScrollView {
  &.vfade { -st-vfade-offset: 32px; }
  &.hfade { -st-hfade-offset: 32px; }
}

StScrollBar {
  padding: 0;

  StScrollView & {
    min-width: if($eta == 'false', 6px, 4px);
    min-height: if($eta == 'false', 6px, 4px);
  }

  StBin#trough {
    margin: 0;
    border-radius: 0;
    background-color: if($nokto == 'false',
                      shellopacity($inverted_fg_color, 0.15),
                      shellopacity($fg_color, 0.15));
  }

  StButton#vhandle,
  StButton#hhandle {
    margin: 0;
    border-radius: 0;
    background-color: if($nokto == 'false',
                      shellopacity($inverted_fg_color, 0.6),
                      shellopacity($fg_color, 0.6));
    &:hover {
      background-color: if($nokto == 'false',
                        shellopacity($inverted_fg_color, 0.8),
                        shellopacity($fg_color, 0.8));
    }
    &:active {
      background-color: if($nokto == 'false',
                        shellopacity($inverted_fg_color, 1),
                        shellopacity($fg_color, 1));
    }
  }
}


// /**********
//  * Slider *
//  **********/

.slider {
  height: 16px;
  color: $accent_color;
  -slider-height: 2px;
  -slider-background-color: if($nokto == 'false',
                            shellopacity($fg_color, 0.1),
                            $fill_color); // background of the trough
  -slider-border-color: transparent; // trough border color
  -slider-active-background-color: $accent_color; // active trough fill
  -slider-active-border-color: transparent; // active trough border
  -slider-border-width: 0;
  -slider-handle-radius: 8px;
}


// /***************
//  * Check Boxes *
//  ***************/

.check-box {
  StBoxLayout { spacing: 0.8em; }

  StBin {
    width: 20px;
    height: 20px;
    background-image: url("assets/checkbox-off.svg");
    color: if($nokto == 'false', $inverted_secondary_fg_color,
                                 $secondary_fg_color);
  }

  &:focus StBin {
    background-image: url("assets/checkbox-off-hover.svg");
    color: if($nokto == 'false', $inverted_fg_color,
                                 $fg_color);
  }
  &:checked StBin {
    background-image: url("assets/checkbox.svg");
    color: if($nokto == 'false', $inverted_fg_color,
                                 $fg_color);
  }
  &:focus:checked StBin {
    background-image: url("assets/checkbox-hover.svg");
    color: if($nokto == 'false', $inverted_fg_color,
                                 $fg_color);
  }
}


// /************
//  * Switches *
//  ************/

.toggle-switch {
  width: 40px;
  height: 20px;
  background-size: contain;
}

@each $v in us, intl {
  .toggle-switch-#{$v} {
    background-image: url("toggle-off.svg");
    &:checked { background-image: url("toggle-on.svg"); }
  }

  *:hover .toggle-switch-#{$v},
  *:active .toggle-switch-#{$v},
  *:focus .toggle-switch-#{$v} {
    background-image: url("toggle-off-hover.svg");
    &:checked { background-image: url("toggle-on-hover.svg"); }
  }
}


// /*********
//  * Links *
//  *********/

.shell-link {
  border-radius: 2px;
  color: $link_color;
  &:hover {
    color: $link_color;
    background-color: shellopacity($link_color, 0.1);
  }
  &:active {
    color: $link_color;
    background-color: shellopacity($link_color, 0.2);
  }
}


// /*****************
//  * Modal Dialogs *
//  *****************/

.headline { @include fontscaling($ref_size * 1.1); }

.lightbox { background-color: #000000; }

.flashspot { background-color: #FFFFFF; }
/* ... */

